# suya-community

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  database.drawio  pyproject.toml
apps/base/: pyproject.toml
apps/testapi/: main.py  pyproject.toml
info_reels_/apps/app/: main.py
info_reels_/apps/app/templates/: settings.html
info_reels_/apps/base/: README.md  pyproject.toml
info_reels_docker/apps/app/: main.py
info_reels_docker/apps/info_reels/: Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
info_reels_docker/apps/info_reels/src/: .env  jobs.py  main.py  models.py  schemas.py  utils.py
info_reels_docker/apps/info_reels/src/static/js/: chart.js
info_reels_docker/apps/info_reels/src/templates/: board.html  home.html
