[tool.poetry]
name = "testapi"
version = "0.1.0"
description = ""
authors = ["Yshgodd <kyun20087@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.111.*"
langchain = "0.2.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
